; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_unregister.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 }
%struct.TYPE_7__ = type { i64 }

@s_vfs_count = common dso_local global i64 0, align 8
@s_vfs = common dso_local global %struct.TYPE_6__** null, align 8
@s_fd_table_lock = common dso_local global i32 0, align 4
@MAX_FDS = common dso_local global i32 0, align 4
@s_fd_table = common dso_local global %struct.TYPE_7__* null, align 8
@FD_TABLE_ENTRY_UNUSED = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@ESP_OK = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_vfs_unregister(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @strlen(i8* %8)
  store i64 %9, i64* %4, align 8
  store i64 0, i64* %5, align 8
  br label %10

10:                                               ; preds = %72, %1
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @s_vfs_count, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %75

14:                                               ; preds = %10
  %15 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @s_vfs, align 8
  %16 = load i64, i64* %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %15, i64 %16
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %6, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %20 = icmp eq %struct.TYPE_6__* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  br label %72

22:                                               ; preds = %14
  %23 = load i64, i64* %4, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %23, %26
  br i1 %27, label %28, label %71

28:                                               ; preds = %22
  %29 = load i8*, i8** %3, align 8
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = call i64 @memcmp(i8* %29, i32 %32, i64 %35)
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %71

38:                                               ; preds = %28
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %40 = call i32 @free(%struct.TYPE_6__* %39)
  %41 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @s_vfs, align 8
  %42 = load i64, i64* %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %41, i64 %42
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %43, align 8
  %44 = call i32 @_lock_acquire(i32* @s_fd_table_lock)
  store i32 0, i32* %7, align 4
  br label %45

45:                                               ; preds = %65, %38
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* @MAX_FDS, align 4
  %48 = icmp slt i32 %46, %47
  br i1 %48, label %49, label %68

49:                                               ; preds = %45
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** @s_fd_table, align 8
  %51 = load i32, i32* %7, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i64 %52
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i64, i64* %5, align 8
  %57 = icmp eq i64 %55, %56
  br i1 %57, label %58, label %64

58:                                               ; preds = %49
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** @s_fd_table, align 8
  %60 = load i32, i32* %7, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i64 %61
  %63 = bitcast %struct.TYPE_7__* %62 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %63, i8* align 8 bitcast (%struct.TYPE_7__* @FD_TABLE_ENTRY_UNUSED to i8*), i64 8, i1 false)
  br label %64

64:                                               ; preds = %58, %49
  br label %65

65:                                               ; preds = %64
  %66 = load i32, i32* %7, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %7, align 4
  br label %45

68:                                               ; preds = %45
  %69 = call i32 @_lock_release(i32* @s_fd_table_lock)
  %70 = load i32, i32* @ESP_OK, align 4
  store i32 %70, i32* %2, align 4
  br label %77

71:                                               ; preds = %28, %22
  br label %72

72:                                               ; preds = %71, %21
  %73 = load i64, i64* %5, align 8
  %74 = add i64 %73, 1
  store i64 %74, i64* %5, align 8
  br label %10

75:                                               ; preds = %10
  %76 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %76, i32* %2, align 4
  br label %77

77:                                               ; preds = %75, %68
  %78 = load i32, i32* %2, align 4
  ret i32 %78
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @memcmp(i8*, i32, i64) #1

declare dso_local i32 @free(%struct.TYPE_6__*) #1

declare dso_local i32 @_lock_acquire(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @_lock_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
